@@ -89,6 +89,11 @@ protected:
 	void setCoreavcUsage(bool b);
 	bool coreavcUsage();
 
+#if YOUTUBE_SUPPORT
+	void setYTQuality(int q);
+	int YTQuality();
+#endif
+
 protected:
 	virtual void retranslateStrings();
 };
